Fixed text according to given comments

--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -67,11 +67,11 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
   Modbusin hyödyntäminen mahdollistaa muiden valmistajien tuotteiden kommunikaation inverttereiden kanssa. Yhteinen standardi helpottaa suurissa järjestelmissä eri valmistajien tuotteiden yhteensopivuuden kanssa, mutta ylipäätään Modbusin käyttö antaa mahdollisuuden kolmannen osapuolen tuotteiden liittämiseen.
 
 \section{Järjestelmien tuotto-ominaisuudet}
-  Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tuntitehon ennustaminen on jo haastavaa sääennusteesta riippuen. Toisaalta kun tuotannon määrä verkossa kasvaa, eri sijainnissa olevat järjestelmät tasaavat näitä tuotannon vaihteluita ja suuressa kuvassa niiden kokonaistuotantokäyrä "pehmenee". Tätä on tutkittu tuulivoiman osalta, joka sähköntuottajana on aurinkosähkön kanssa samankaltainen. \parencite{FluctuationIssues}
+  Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tuntitehon ennustaminen on jo haastavaa sääennusteesta riippuen. Toisaalta, kun tuotannon määrä verkossa kasvaa, eri sijainnissa olevat järjestelmät tasaavat näitä tuotannon vaihteluita ja suuressa kuvassa niiden kokonaistuotantokäyrä "pehmenee". Tätä on tutkittu tuulivoiman osalta, joka sähköntuottajana on aurinkosähkön kanssa samankaltainen. \parencite{FluctuationIssues}
   
-  Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla aurinkosähköjärjestelmät tuovat haasteita, sillä pientuotantoa lisätessä johtolähtöjen jännitetasot nousevat ja verkon suojaustoimintoja voidaan joutua päivittämään. Esimerkiksi mikrotuotanto voi aiheuttaa vikavirtasuojauksen virhelaukaisun, mikäli tuotanto on lähellä muuntajan kiskoa ja se alkaa syöttämään läheisen lähdön vikatilanteessa vikavirtaa kiskoa kohta. Tällöin terveessä lähdössä tapahtuu virhelaukaisu. \parencite{Mikrotuotanto}
+  Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla aurinkosähköjärjestelmät tuovat haasteita, sillä pientuotantoa lisätessä johtolähtöjen jännitetasot nousevat ja verkon suojaustoimintoja voidaan joutua päivittämään. Esimerkiksi mikrotuotanto voi aiheuttaa vikavirtasuojauksen virhelaukaisun, mikäli tuotanto on lähellä muuntajan kiskoa ja se alkaa syöttämään läheisen lähdön vikatilanteessa vikavirtaa kiskoa kohti. Tällöin terveessä lähdössä tapahtuu virhelaukaisu. \parencite{Mikrotuotanto}
   
-  Aurinkosähkön osuuden kasvaminen sähköntuotannossa lisää tuotantokapasiteetin tarvetta sähkömarkkinoilla. Päivän aikana nettotehonmuutos on suuri, kun aurinkosähköjärjestelmät alkavat tuottaa sähköä samalla, kun kysyntä laskee ihmisten lähtiessä töihin. Vastaavasti sama tapahtuu illasta kun ihmiset palaavat töistä ja järjestelmän tuottoteho laskee. Tätä ilmiötä kuvaa niin sanottu "duck"-käyrä, joka nähdään kuvassa 2.3. \begin{figure}
+  Aurinkosähkön osuuden kasvaminen sähköntuotannossa lisää säädettävän tuotantokapasiteetin tarvetta sähkömarkkinoilla. Päivän aikana nettotehonmuutos on suuri, kun aurinkosähköjärjestelmät alkavat tuottaa sähköä samalla, kun kysyntä laskee ihmisten lähtiessä töihin. Vastaavasti sama tapahtuu illasta kun ihmiset palaavat töistä ja järjestelmän tuottoteho laskee. Tätä ilmiötä kuvaa niin sanottu "duck"-käyrä, joka nähdään kuvassa 2.3. \begin{figure}
     \centering
     \includegraphics[width=1.1\textwidth]{figures/Duck_curve.png}
     \caption{"Duck"-käyrä}
@@ -81,4 +81,4 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
 
   Yksittäiselle kuluttajalle energiavarastoista saatavat hyödyt tulevat tuotetun sähkön hyödyntämisestä kalliimman sähkönhinnan aikaan, sillä kuluttajan saama tuotto myydystä sähköstä on pienempi kuin itse kulutetun energian hinta. Lisäksi tuottaja voi haluta kodistaan enemmän energiaomavaraisen ja käyttää tuotetun sähkön kokonaan itse. Mikäli kuluttajalla ei ole kulutusjoustoon soveltuvia laitteita, voi se hyödyntää energiavarastoa tuotetun sähkön hyödyntämiseen tuotantoajan ulkopuolella.
   
-  Tuottajasta puhuttaessa on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on tuottajallakin syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi.  
+  Tuottajalla on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on myös tuottajalla syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi. Tariffihinnoittelun muuttuminen tulevaisuudessa tehopohjaiseksi kannustaa yrityksiä investoimaan myös energiavarastoihin, sillä niillä voidaan loiventaa kulutushuippua, jolloin tariffimaksu pienenee.
