--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -249,3 +249,16 @@
 	year = {2017},
 	author = {Radermacher, Reinhard},
 }
+
+@manual{SMAPPManager,
+	organization = {SMA},
+	url          = {https://files.sma.de/downloads/PPM-10-DS-en-21.pdf},
+	urldate      = {2020-10-21},
+}
+
+@masterthesis{kysJousto,
+	author  = {Joona Siivonen},
+	title   = {Kysynnän jousto -hanke - Tekniset ratkaisut julkisissa kiinteistöissä},
+	school  = {Tampereen ammattikorkeakoulu},
+	year    = {2014}
+}
