Comments fixed from two first parts (my parts)

--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -81,4 +81,4 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
 
   Yksittäiselle kuluttajalle energiavarastoista saatavat hyödyt tulevat tuotetun sähkön hyödyntämisestä kalliimman sähkönhinnan aikaan, sillä kuluttajan saama tuotto myydystä sähköstä on pienempi kuin itse kulutetun energian hinta. Lisäksi tuottaja voi haluta kodistaan enemmän energiaomavaraisen ja käyttää tuotetun sähkön kokonaan itse. Mikäli kuluttajalla ei ole kulutusjoustoon soveltuvia laitteita, voi se hyödyntää energiavarastoa tuotetun sähkön hyödyntämiseen tuotantoajan ulkopuolella.
   
-  Tuottajalla on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on myös tuottajalla syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi. Tariffihinnoittelun muuttuminen tulevaisuudessa tehopohjaiseksi kannustaa yrityksiä investoimaan myös energiavarastoihin, sillä niillä voidaan loiventaa kulutushuippua, jolloin tariffimaksu pienenee.
+  Tuottajalla on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on myös tuottajalla syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi. Vaikka verkkokoodi ei pakottaisi investoimaan energiavarastoon, voi se olla kannattavaa, jos verkonhaltija joutuisi vahvistamaan verkkoa ja liittyjän kustannukset nousisi muuten. Tariffihinnoittelun muuttuminen tulevaisuudessa tehopohjaiseksi kannustaa yrityksiä investoimaan myös energiavarastoihin, sillä niillä voidaan loiventaa kulutushuippua, jolloin tariffimaksu pienenee.
