--- a/tex/rajapinnat.tex
+++ b/tex/rajapinnat.tex
@@ -122,7 +122,7 @@ Kaikkein matalimman abstraktiotason rajapintoja eli fyysisiä liitäntöjä tai 
 
   IEC 61850 ei ole vielä laajasti käytössä inverttereissä, ja ainoa löydetty esimerkki sen suorasta käytöstä on SMA:n\footnote{SMA Solar Technology AG -- System-, Mess- und Anlagentechnik} tarjoama standardia hyödyntävä rajapinta Italiassa toimiville inverttereille \parencite{SMAManual}. Tällä voidaan irrottaa tai kytkeä invertteri verkkoon, tai muuttaa invertterin taajuusrajoja. Italian CEI 0-21 -standardissa vaaditaan inverttereille rajapinta verkonhaltijalle, jonka takia luultavasti tämä ominaisuus on SMA:n ohjekirjassa merkattu vain Italia -ominaisuudeksi. Tämän vaatimuksen\footnote{\url{http://blog.nettedautomation.com/2012/07/iec-61850-in-italy-sma-offers-iec-61850.html}} lähde ei ole alkuperäinen, joten tätä vaatimusta ei voitu vahvistaa varmaksi, tosin SMA:n erillinen ohjeistus Italian laitteille viittaa siihen.
 
-  IEC standardin ja Modbusin välille on olemassa myös protokollamuuntimia, jolloin invertterit saadaan näkymään IEC standardin mukaisina laitteina. Esimerkiksi SMA:n keskusinvertterit voidaan liittää verkonhaltijan ohjaukseen erillisellä ohjauslaitteella, joka toimii samalla IEC61850-Modbus -muuntimena järjestelmälle, vaikka invertteri ei itsessään kyseistä standardia tuekaan \parencite{SMAPPManager}. Tämä toteuttaa silloin Fingridin VJV2018 -dokumentissa määritellyt etäohjausvalmiusvaatimukset yli \SI{1}{\mega\watt}:n suuruisille voimalaitoksille \parencite{VJV2018}.
+  IEC standardin ja Modbusin välille on olemassa myös protokollamuuntimia, jolloin invertterit saadaan näkymään IEC standardin mukaisina laitteina. Esimerkiksi SMA:n keskusinvertterit voidaan liittää verkonhaltijan ohjaukseen erillisellä ohjauslaitteella, joka toimii samalla IEC61850-Modbus -muuntimena järjestelmälle, vaikka invertteri ei itsessään kyseistä standardia tuekaan \parencite{SMAPPManager}. Tämä toteuttaa silloin Fingridin VJV2018 -dokumentissa määritellyt etäohjausvalmiusvaatimukset yli \SI{1}{\mega\watt}:n suuruisille voimalaitoksille, joissa on IEC61850 yhtenä hyväksytyistä kommunikaatiostandardeista \parencite{VJV2018}.
 
 \section{SunSpec Modbus}
   SunSpec Modbus on SunSpec Alliancen määrittelemä sovellustason toteutus, joka hyödyntää yleisesti käytössä olevaa Modbus-protokollaa. Sunspec Modbus sijoittuu rakenteellisesti Modbusin päälle, kuten taulukossa 4.3 kuvattiin. Fyysinen Modbus-rajapinta on sisäänrakennettu noin \SI{80}{\percent}:iin asennetuista hajautetun energiantuotannon laitteista, joten tämän toteutuksen tuominen suurelle määrälle laitteita on melko yksinkertaista \parencite{SSFactSheet}.
